--- a/analysis/Generate networks and outbreaks.ipynb
+++ b/analysis/Generate networks and outbreaks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vacc_samps_all = pd.DataFrame()\n",
+    "for i in range(1000): \n",
+    "    vacc_frame_samp = pd.DataFrame.from_dict(transnet.vacc_dict_samples['sample ' +  str(i)], orient='index').reset_index()\n",
+    "    vacc_samps_all = pd.concat([vacc_samps_all, vacc_frame_samp])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vacc_samps_all.columns = ['BRIN', 'vacc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_vacc_dict = vacc_samps_all.groupby('BRIN').median().to_dict()['vacc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.236632202787938"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_vacc_dict[\"30TF00\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +105,11 @@
     "data_net = mn.build_network_alinks()\n",
     "vacc_dict_samples = vacc.vacc_sample_dict()\n",
     "nodelist_dt = np.intersect1d(np.intersect1d(data_net.nodes(), \n",
-    "                          list(map(str, vacc_dict_samples['sample 0'].keys()))), school_data.BRIN)\n",
+    "                          list(map(str, mean_vacc_dict.keys()))), school_data.BRIN)\n",
     "\n",
     "\n",
     "\n",
-    "vacc_dict_pc4 = vacc.vacc_pc4_dict(nodelist_dt, vacc_dict_samples['sample 0'], n=20., by='school')\n",
+    "vacc_dict_pc4 = vacc.vacc_pc4_dict(nodelist_dt, mean_vacc_dict, n=20., by='school')\n",
     "\n",
     "\n",
     "\n"
@@ -67,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vacc_dict_yso = [transnet.create_yso_dict(y, vacc_dict_samples['sample 0'], \n",
+    "vacc_dict_yso = [transnet.create_yso_dict(y, mean_vacc_dict, \n",
     "                                         school_data, years_in_pri=8., \n",
     "                                         years_in_sec=5., post_outbreak=0.98) for y in range(1, 14, 1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1506,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
